[tool.poetry]
name = "wb-hw-1"
version = "0.1.0"
description = ""
authors = ["aupoderni <poderniafina@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.*"
numpy = "^1.26.0"
pandas = "^2.1.1"
jupyterlab = "^4.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
